syntax = "proto3";

package User;

message GetPresignedUrlDto {
  optional string fileName = 1;
  string userId = 2;
}

enum UserGrpcThemePreferences {
  LIGHT = 0;
  DARK = 1;
  SYSTEM = 2; 
}

message UserCreateProfileDto {
  string authId = 1;
  string email = 2;
  string handle = 3;
  string avatar = 4;
}

message UserUpdateProfileDto {
  string id = 1;
  optional string dob = 2;
  optional string phoneNumber = 3;
  optional string avatar = 4;
}

message UserChangeNotificationStatusDto {
  string id = 1;
  bool notificationStatus = 2;
}

message UserChangePreferredThemeDto {
  string id = 1;
  UserGrpcThemePreferences themePerference = 2;
}

message UserChangePreferredLanguageDto {
  string id = 1;
  string language = 2;
}

message UserVerifyPhoneNumberDto {
  string id = 1;
  string phoneNumber = 2;
}

message UserUpdateByIdDto {
  string id = 1;
  optional string fullName = 2;
  optional string avatar =3;
  optional string dob = 4;
}

message GetPreSignedUrlResponse {
  string response = 1;
  string fileIdentifier = 2;
}

message UserProfileCreatedResponse {
  string response = 1;
  string userId = 2;
}

message UserUpdateProfileResponse {
  string response = 1;
  string userId = 2;
}

message UserNotificationStatusChangedResponse {
  string response = 1;
  bool status = 2;
}

message UserPreferredLanguageChangedResponse {
  string response = 1;
  string language = 2;
}

message UserPreferredThemeChangedResponse {
  string response = 1;
  string theme = 2;
}

message UserPhoneNumberVerifiedResponse {
  string response = 1;
  bool verified = 2;
}

message UserProfileUpdatedResponse {
  string response = 1;
  string userId = 2;
}

message Empty {}


service UserService {
  rpc getPresignedUrlForFileUpload(GetPresignedUrlDto) returns (GetPreSignedUrlResponse) {}
  rpc createProfile(UserCreateProfileDto) returns (UserProfileCreatedResponse) {}
  rpc updateProfile(UserUpdateProfileDto) returns (UserUpdateProfileResponse) {}
  rpc changeNotificationStatus(UserChangeNotificationStatusDto) returns (UserNotificationStatusChangedResponse) {}
  rpc changePreferredLanguage(UserChangePreferredLanguageDto) returns (UserPreferredLanguageChangedResponse) {}
  rpc changePreferredTheme(UserChangePreferredThemeDto) returns (UserPreferredThemeChangedResponse) {}
  rpc verifyPhoneNumber(UserVerifyPhoneNumberDto) returns (UserPhoneNumberVerifiedResponse) {}
  rpc updateUserProfileById(UserUpdateByIdDto) returns (UserProfileUpdatedResponse) {}
}